--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="min_protein">Min Protein (grams):</label>
+                    <label for="max_protein">Max Protein (grams):</label>
                     <input type="number" id="max_protein" name="max_protein" placeholder="e.g., 30">
                 </div>
 
