--- a/static/style.css
+++ b/static/style.css
@@ -120,31 +120,20 @@ input[type="number"] {
     gap: 10px;
 }
 
-.view-recipe-button,
+
 .see-ingredients-button {
     display: inline-block;
-    padding: 10px 15px;
-    border-radius: 6px;
+    padding: 0.5em 1em;
+    margin: 0.5em 0;
+    background-color: #007bff;
+    color: white;
     text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    transition: background-color 0.3s;
+    border-radius: 4px;
 }
 
-.view-recipe-button {
-    background-color: #97c1a9;
-}
-
-.view-recipe-button:hover {
-    background-color: #0056b3;
-}
-
-.see-ingredients-button {
-    background-color: #8fcaca;
-}
 
 .see-ingredients-button:hover {
-    background-color: #c82333;
+    background-color: #0056b3;
 }
 
 body {
@@ -179,7 +168,7 @@ h1 {
 }
 
 .recipe-image {
-    max-width: 100%;
+    max-width: 50%;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
@@ -235,3 +224,24 @@ strong {
     background-color: #0056b3;
 }
 
+
+/* Add to your style.css */
+.ready-in-minutes {
+    font-size: 1em;
+    color: #333;
+    margin: 0.5em 0;
+}
+
+.source-url-button {
+    display: inline-block;
+    padding: 0.5em 1em;
+    margin: 0.5em 0;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.source-url-button:hover {
+    background-color: #0056b3;
+}
