--- a/static/style.css
+++ b/static/style.css
@@ -63,6 +63,36 @@ input[type="number"] {
     box-sizing: border-box;
 }
 
+/* Filter button and dropdown */
+.filter-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 6px;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+.filter-button:hover {
+    background-color: #0056b3;
+}
+
+.filter-section {
+    width: 100%;
+    padding: 10px;
+    background-color: #f4f4f4;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    margin-bottom: 15px;
+    display: none; /* Initially hidden */
+}
+
+.filter-section.visible {
+    display: block;
+}
+
 .search-button {
     display: block;
     width: 100%;
@@ -120,7 +150,6 @@ input[type="number"] {
     gap: 10px;
 }
 
-
 .see-ingredients-button {
     display: inline-block;
     padding: 0.5em 1em;
@@ -131,34 +160,8 @@ input[type="number"] {
     border-radius: 4px;
 }
 
-
 .see-ingredients-button:hover {
     background-color: #0056b3;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-}
-
-.container {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-header {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-h1 {
-    color: #333;
 }
 
 .recipe-details {
@@ -224,8 +227,6 @@ strong {
     background-color: #0056b3;
 }
 
-
-/* Add to your style.css */
 .ready-in-minutes {
     font-size: 1em;
     color: #333;
