--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -32,7 +32,7 @@
             {% endif %}
         </section>
 
-        <a href="{{ url_for('index') }}">Back to Search</a>
+        <a href="{{ url_for('index') }}" class="back-button">Back to Search</a>
     </main>
 </body>
 </html>
